# brainfuck

./: 1.txt  2.txt  3.txt  4.bf  4.txt  5.txt  Cargo.toml  README.md  USAGE.md  bench.rs  rustfmt.toml
src/: interpreter.rs  lib.rs  main.rs  memory.rs  parser.rs  token.rs
